Project

General

Profile

Actions

Bug #58966

closed

BlueFS does not prealloc space

Added by Adam Kupczyk about 1 year ago. Updated 8 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
quincy, pacific, reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

We were missing implementation of
`BlueRocksWritableFile::Allocate(off_t offset, off_t len)`.


Related issues 3 (0 open3 closed)

Copied to bluestore - Backport #61307: reef: BlueFS does not prealloc spaceResolvedActions
Copied to bluestore - Backport #61308: quincy: BlueFS does not prealloc spaceResolvedActions
Copied to bluestore - Backport #61309: pacific: BlueFS does not prealloc spaceResolvedActions
Actions #1

Updated by Adam Kupczyk about 1 year ago

  • Pull request ID set to 50469
Actions #2

Updated by Igor Fedotov about 1 year ago

  • Status changed from New to Fix Under Review
  • Backport set to quincy, pacific, reef
Actions #3

Updated by Igor Fedotov about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 1 year ago

Actions #5

Updated by Backport Bot about 1 year ago

Actions #6

Updated by Backport Bot about 1 year ago

Actions #7

Updated by Backport Bot about 1 year ago

  • Tags set to backport_processed
Actions #8

Updated by Igor Fedotov 8 months ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF